tests/paczka1/fuzzy1/15731188.err
Error in line 9: V3fbGGa7rO A605 0,0
Error in line 1: bj6SpTGulLq A605 30,6
Error in line 10: V3fbGGa7rO S114 86,7
Error in line 16: 2msrHMzZuH A474 83,4
Error in line 2: vmTM S114 59,0
Error in line 17: 2msrHMzZuH S114 36,3
Error in line 22: vmTM A492 7,7
Error in line 28: V3fbGGa7rO A474 97,6
Error in line 23: 2msrHMzZuH A474 45,1
